Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63781

Windows: Context menus of QSystemTrayIcon has wrong position when AA_EnableHighDpiScaling is set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.3
    • 5.9.2
    • Widgets: Main Window
    • None
    • Windows 1709, surface book
    • e00b295344e23bf2110c744b057225a24d589757 (qtbase/5.9. 16.10.2017, 5.9.3)

      The Context menus of QSystemTrayIcon has wrong position on 5.9.2 when AA_EnableHighDpiScaling is set.
      I only have a primary screen scaled to 200%.
      Qt 5.7.1 work fine.

      Steps to reproduce:
      1. Set QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
      2. Run Qt examples systray
      3. Right-click to check Context menus of QSystemTrayIcon

        1. display.png
          display.png
          29 kB
        2. systray-examples.zip
          123 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            vidarxu Carter Davies
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes