QSystemTrayIcon/Windows: Fix position of context menu with High DPI scaling

Apply scale factor of screen.

Task-number: QTBUG-63781
Change-Id: I1b5630edbdf6bb356955a7d70458a885af441953
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>